# personal-website

./: .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  LICENSE  README.md  compose.tools.yaml  compose.yml  environment.yml  main.Dockerfile  pyproject.toml  requirements.txt  rxconfig.py
.github/workflows/: integration-tests.yml  regression-tests.yml
.web/: package-lock.json  package.json  reflex.json
.web/pages/: dashboard.js  index.js  settings.js
__marimo__/session/: logistic.py.json
assets/: asset_data.py  intro.md
assets/articles/: intro.md
assets/articles/dml1/: description.md  title.md
assets/articles/dml2/: description.md  title.md
assets/fonts/: fonts.css
assets/index/: index_intro.md
assets/notebooks/: dml1.html  dml1.py  fwl.html  fwl.py  logistic.html  logistic.py  nm1.py  tsne.py
assets/research/: capstone.md  thesis.md
assets/shared/: links.py
assets/text/: articles_intro.md
deployment_backup/: Caddy.Dockerfile  Caddyfile  compose.prod.yaml  compose.yml  prod.Dockerfile
env/: dev_requirements.txt  environment.yml  reflex_requirements.txt  requirements.txt
personal_website/: base_state.py  constants.py  personal_website.py  state.py  styles.py
personal_website/components/: footer.py  logo.py  navbar.py  sidebar.py  spline.py  spline_404.py
personal_website/pages/: __init__.py  article_pages.py  articles.py  dashboard.py  home.py  index.py  page404.py  projects.py  research.py  resume.py  settings.py
personal_website/structural/: __init__.py  styles.py  template.py
personal_website/templates/: template.py
(+25 files in other folders)
