[project]
name = "jacob-pieniazek.com"
description = "My personal website."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Jacob Pieniazek" },
]

[tool.black]
line-length = 88

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
skip = [
    ".web",
    "__pycache__",
    "assets"
]