[project]
name = "personal-website"
version = "0.1.0"
description = "Repository for my personal website build using Reflex."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.11.7",
    "reflex==0.7.0",
]

[dependency-groups]
dev = [
    "anthropic>=0.46.0",
    "jupyter>=1.1.1",
    "pre-commit>=4.1.0",
    "pynvim>=0.5.2",
    "ruff>=0.9.7",
]
